# amplifier-module-tool-nano-banana

./: .gitignore  README.md  USAGE_EXAMPLES.md  bundle.md  generate_banana.py  pyproject.toml  simple_generate.py  test_bundle.yaml  test_generate.py  test_integration.py
.amplifier/: bundle.md  settings.yaml
.github/: RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
agents/: nano-banana-expert.md
amplifier_module_tool_nano_banana/: __init__.py  tool.py
behaviors/: nano-banana.yaml
context/: instructions.md  nano-banana-awareness.md
tests/: __init__.py  test_tool.py
